<resources>
    <string name="app_name">FinalProject</string>
    <!-- My Strings-->
    <string name="nickname_placeholder">Enter your nickname</string>
    <string name="password_placeholder">Enter your password</string>
    <string name="profession_placeholder">What I do</string>
    <string name="sing_up">SIGN UP</string>
    <string name="sign_in">SIGN IN</string>
    <string name="not_register_label">Not registered?</string>
    <string name="todo">TODO</string>
    <string name="search_placeholder">Search</string>

    <string name="change_nickname_placeholder">nickname</string>
    <string name="change_profession_placeholder">profession</string>

    <string name="scroll_placeholder">
        Lorem Ipsum is simply dummy text of the printing and typesetting industry.
        Lorem Ipsum has been the industry standard dummy text ever since the 1500s,
        when an unknown printer took a galley of type and scrambled it to make a
        type specimen book. It has survived not only five centuries, but also the
        leap into electronic typesetting, remaining essentially unchanged. It was
        popularised in the 1960s with the release of Letraset sheets containing
        Lorem Ipsum passages, and more recently with desktop publishing software
        like Aldus PageMaker including versions of Lorem Ipsum.
        Lorem Ipsum is simply dummy text of the printing and typesetting industry.
        Lorem Ipsum has been the industry standard dummy text ever since the 1500s,
        when an unknown printer took a galley of type and scrambled it to make a
        type specimen book. It has survived not only five centuries, but also the
        leap into electronic typesetting, remaining essentially unchanged. It was
        popularised in the 1960s with the release of Letraset sheets containing
        Lorem Ipsum passages, and more recently with desktop publishing software
        like Aldus PageMaker including versions of Lorem Ipsum.
    </string>

    <string name="update">UPDATE</string>
    <string name="sign_out">SIGN OUT</string>
</resources>