<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/avatar_image"
        android:layout_width="@dimen/avatar_image_size"
        android:layout_height="@dimen/avatar_image_size"
        android:layout_marginTop="@dimen/margin_64"
        android:contentDescription="@string/todo"
        android:src="@drawable/avatar_image_placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/nickname"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/input_item_height"
        android:layout_marginTop="@dimen/margin_32"
        android:autofillHints="username"
        android:background="@drawable/input_item"
        android:gravity="center"
        android:hint="@string/nickname_placeholder"
        android:inputType="textPersonName"
        android:paddingHorizontal="@dimen/padding_42"
        android:paddingVertical="@dimen/padding_8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/avatar_image" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/input_item_height"
        android:layout_marginTop="@dimen/margin_8"
        android:inputType="textPassword"
        android:hint="@string/password_placeholder"
        android:gravity="center"
        android:background="@drawable/input_item"
        android:paddingHorizontal="@dimen/padding_42"
        android:paddingVertical="@dimen/padding_8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nickname"
        android:autofillHints="password"/>

    <Button
        android:id="@+id/sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16"
        android:text="@string/sign_in"
        android:backgroundTint="@color/blue"
        android:textSize="@dimen/text_size"
        android:fontFamily="sans-serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <TextView
        android:id="@+id/suggestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_8"
        android:text="@string/not_register_label"
        android:textSize="@dimen/not_register_label_size"
        app:layout_constraintBottom_toTopOf="@+id/sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_16"
        android:text="@string/sing_up"
        android:textSize="@dimen/text_size"
        android:textColor="@color/grey"
        android:fontFamily="sans-serif"
        style="?attr/materialButtonOutlinedStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:strokeColor="@color/grey"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>