<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registration">

    <ImageView
        android:id="@+id/rp_avatar_image"
        android:layout_width="@dimen/avatar_image_size"
        android:layout_height="@dimen/avatar_image_size"
        android:layout_marginTop="@dimen/margin_128"
        android:contentDescription="@string/todo"
        android:src="@drawable/avatar_image_placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/rp_nickname"
        android:layout_width="@dimen/input_item_width"
        android:layout_height="@dimen/input_item_height"
        android:layout_marginTop="@dimen/margin_32"
        android:inputType="textPersonName"
        android:hint="@string/nickname_placeholder"
        android:gravity="center"
        android:background="@drawable/input_item"
        android:paddingHorizontal="@dimen/padding_42"
        android:paddingVertical="@dimen/padding_8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rp_avatar_image"
        android:autofillHints="username" />

    <EditText
        android:id="@+id/rp_password"
        android:layout_width="@dimen/input_item_width"
        android:layout_height="@dimen/input_item_height"
        android:layout_marginTop="@dimen/margin_8"
        android:inputType="textPassword"
        android:hint="@string/password_placeholder"
        android:gravity="center"
        android:background="@drawable/input_item"
        android:paddingHorizontal="@dimen/padding_42"
        android:paddingVertical="@dimen/padding_8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rp_nickname"
        android:autofillHints="password" />

    <EditText
        android:id="@+id/rp_profession"
        android:layout_width="@dimen/input_item_width"
        android:layout_height="@dimen/input_item_height"
        android:layout_marginTop="@dimen/margin_16"
        android:autofillHints="profession"
        android:background="@drawable/input_item"
        android:gravity="center"
        android:hint="@string/profession_placeholder"
        android:inputType="text"
        android:paddingHorizontal="@dimen/padding_42"
        android:paddingVertical="@dimen/padding_8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rp_password" />

    <Button
        android:id="@+id/rp_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_64"
        android:backgroundTint="@color/blue"
        android:fontFamily="sans-serif"
        android:text="@string/sing_up"
        android:textSize="@dimen/text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rp_profession" />


</androidx.constraintlayout.widget.ConstraintLayout>