<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pages.MainPage"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/avatar_image_size"
        android:backgroundTint="@color/blue">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            app:contentScrim="@color/blue">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/background"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"/>


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/search_input_item_height"
                app:layout_collapseMode="pin"
                android:layout_gravity="bottom">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/mp_search"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/search_placeholder"
                    android:textColorHint="@color/grey"
                    android:textColor="@color/black"
                    android:layout_marginHorizontal="@dimen/margin_16"
                    android:layout_marginBottom="@dimen/margin_8"
                    android:layout_marginTop="@dimen/margin_4"
                    app:hintTextColor="@color/transparent"
                    app:startIconDrawable="@drawable/ic_search"
                    app:startIconTint="@color/icon_color"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/search"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="@color/black"
                        android:background="@drawable/input_item"/>

                </com.google.android.material.textfield.TextInputLayout>

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!-- HAD NO TIME TO MANAGE CHAT :( -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="@dimen/text_size_Xlarge"
                android:text="@string/scroll_placeholder" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/mp_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        app:layout_anchor="@id/bottomAppBar"
        app:srcCompat="@drawable/ic_add"
        app:tint="@color/white"
        android:contentDescription="@string/todo" />

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:backgroundTint="@color/white"
        app:hideOnScroll="true"
        app:fabAlignmentMode="center"
        style="@style/Widget.MaterialComponents.BottomAppBar.Colored">

        <ImageButton
            android:id="@+id/mp_home"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:src="@drawable/ic_home"
            android:backgroundTint="@color/white"
            android:layout_gravity="start"
            android:layout_marginHorizontal="@dimen/margin_64"
            android:contentDescription="@string/todo"
            app:tint="@color/blue" />

        <ImageButton
            android:id="@+id/mp_profile"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:src="@drawable/ic_settings"
            app:startIconTint="@color/icon_color"
            android:backgroundTint="@color/white"
            android:layout_gravity="end"
            android:layout_marginHorizontal="@dimen/margin_64"
            android:contentDescription="@string/todo"
            app:tint="@color/grey"/>

    </com.google.android.material.bottomappbar.BottomAppBar>


</androidx.coordinatorlayout.widget.CoordinatorLayout>